--- a/moxingyanjiu/morelull.cls
+++ b/moxingyanjiu/morelull.cls
@@ -2,11 +2,11 @@
 % 个人自用文档样式
 %
 
-\ProvidesClass{ylsart}[2022/08/03 v0.1.1]
+\ProvidesClass{morelull}[2019/06/06 v0.1.1]
 
 \LoadClass[UTF8]{ctexart}
 
-\usepackage{ylsart}
+\usepackage{morelull}
 
 %%% 字体设置 %%%
 \setmonofont{Fantasque Sans Mono}
