--- a/exam-zh-v0.1.27/example-single.tex
+++ b/exam-zh-v0.1.27/example-single.tex
@@ -5,16 +5,16 @@
   page/size=a4paper,
   paren/show-paren=true,
   paren/show-answer=true,
-  fillin/show-answer=false,
-  solution/show-solution=false
+  fillin/show-answer=true,
+  solution/show-solution=true 
 }
 
 \ExamPrintAnswerSet{
-  sealline/show=true,
+  sealline/show=false,
   page/size=a3paper,
-  paren/show-answer=false,
-  fillin/show-answer=false,
-  solution/show-solution=false,
+  paren/show-answer=true,
+  fillin/show-answer=true,
+  solution/show-solution=true,
 }
 
 
