--- a/moxingyanjiu/morelull.sty
+++ b/moxingyanjiu/morelull.sty
@@ -25,7 +25,7 @@
 % 调色板
 \RequirePackage{xcolor-material}
 % 代码提示
-\RequirePackage{listings}
+%\RequirePackage{listings}
 % 版边边距
 %\RequirePackage[left=2cm, right=2cm, bottom=2cm]{geometry}
 % 更加现代定理、引用提示
