--- a/BHCexam/test1.tex
+++ b/BHCexam/test1.tex
@@ -1,4 +1,4 @@
-\documentclass[marginline]{BHCexam}
+\documentclass[marginline,answers]{BHCexam}
 
 
 \begin{document}
@@ -12,7 +12,7 @@
 
 \question 已知集合~$A=\{x\mid \abs{x-1}<3 \}$,
 集合~$B=\{y| y=x^2+2x+1,x\in\mathbb{R}\}$, 则~$A\cap
-\complement_U B$~为\stk{C}.
+\complement_U B$~为\xx{D}.
 
 \twoch{$[\,0,4)$}{$(-\infty,-2\,]\cup[4,+\infty)$}{$(-2,0)$}{$(0,4)$}
 
